fixed image alignment

--- a/app/client/css/app.css
+++ b/app/client/css/app.css
@@ -36,7 +36,7 @@ body {
 
 img {
 	position: relative;
-	bottom: 15px;
+	bottom: -25px;
 }
 
 h1 { 
